<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ligo Depois</string>
    <string name="menu_schedule_list_about">Sobre</string>
    <string name="menu_schedule_list_old">Antigos</string>
    <string name="menu_schedule_list_new">Novo</string>
    <string name="title_activity_schedule">Agendar</string>
    <string name="title_activity_schedule_list">Ligo Depois</string>
    <string name="title_activity_contacts">Contatos</string>
    <string name="title_activity_schedule_list_old">Antigos</string>
    <string name="call_notification_title">Ligar para: %1$s</string>
    <string name="action_yes">Sim</string>
    <string name="action_1_hour">Em 1 hora</string>
    <string name="action_not">Desistir</string>
    <string name="title_activity_call_execute">Ligação Agendada</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="menu_call_execute_cancel">Desistir</string>
    <string name="menu_schedule_ok">Ok</string>
    <string name="menu_schedule_delete">Excluir</string>
    <string name="activity_schedule_list_empty">Nenhuma ligação agendada. Para agendar clique AQUI.</string>
    <string name="title_activity_teste">TesteActivity</string>
    <string name="contact_number">Número do Contato</string>
    <string name="contact_name">Contato</string>
    <string name="date">Data</string>
    <string name="time">Hora</string>
    <string name="note">Anotação</string>
    <string name="delete">Excluir</string>

</resources>
