<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".ScheduleActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            layout="@layout/toolbar_new"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageButton
                        android:id="@+id/btnContact"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:onClick="onContact"
                        android:background="?actionBarItemBackground"
                        android:contentDescription="Localizar Contato"
                        android:src="@drawable/ic_action_person" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:orientation="vertical">

                        <AutoCompleteTextView
                            android:id="@+id/txtContactName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:background="#00000000"
                            android:completionThreshold="3"
                            android:hint="@string/contact_name"
                            android:paddingBottom="16dp"
                            android:paddingTop="16dp"
                            android:singleLine="true"
                            android:textSize="16sp" />

                        <AutoCompleteTextView
                            android:id="@+id/txtPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:background="#00000000"
                            android:completionThreshold="3"
                            android:hint="@string/contact_number"
                            android:paddingBottom="16dp"
                            android:paddingTop="16dp"
                            android:singleLine="true"
                            android:textSize="16sp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/primary_color" />
                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="8dp"
                        android:background="?actionBarItemBackground"
                        android:contentDescription="Alarme"
                        android:src="@drawable/ic_action_event" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="16dp"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal"
                                android:paddingBottom="16dp"
                                android:paddingTop="16dp">

                                <EditText
                                    android:id="@+id/txtAlarm"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="#00000000"
                                    android:focusable="false"
                                    android:hint="@string/date"
                                    android:inputType="date"
                                    android:onClick="showDatePickerDialog"
                                    android:textSize="16sp" />

                                <EditText
                                    android:id="@+id/txtTime"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:background="#00000000"
                                    android:focusable="false"
                                    android:hint="@string/time"
                                    android:inputType="time"
                                    android:onClick="showTimePickerDialog"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </LinearLayout>

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:background="@color/primary_color" />
                    </LinearLayout>

                </FrameLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="10dp"
                        android:background="?actionBarItemBackground"
                        android:contentDescription="Anotação"
                        android:src="@drawable/ic_action_view_as_list" />

                    <EditText
                        android:id="@+id/txtNote"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="56dp"
                        android:layout_marginRight="16dp"
                        android:background="#00000000"
                        android:hint="@string/note"
                        android:inputType="textMultiLine"
                        android:maxLength="300"
                        android:maxLines="3"
                        android:onClick="showTimePickerDialog"
                        android:paddingBottom="16dp"
                        android:paddingTop="16dp"
                        android:textSize="16sp" />

                </FrameLayout>

            </LinearLayout>

        </ScrollView>

        <Button
            android:id="@+id/btnDelete"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/btn_delete"
            android:onClick="onDelete"
            android:text="EXCLUIR"
            android:textColor="#fff" />
    </FrameLayout>

</LinearLayout>